--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -19,5 +19,9 @@
     </span>
     <button (click) ="cancel()" type="button" class="btn btn-default">Cancel</button>
   </form>
+  <br>
+  <div *ngIf="loginInvalid" class="alert alert-danger">Invalid Login Info
+
+  </div>
 </div>
 </div>
